src/_topbars.scss
@import "variables";
@import "mixins";

/* Topbar
	 ========================================================================== */

.topbar {
	background: $primary;
	height: 84px;
	padding: 0 20px;
}

.topbar-logo {
	float: left;
	margin: 2px 0;
}

.topbar-logo-link {
	@include anim(color);
	color: rgba($white, .8);
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	font-family: $font-family-secondary;
	font-weight: 700;
	margin: 30px 0;
}

.topbar-logo-link:hover,
.topbar-logo-link:focus {
	color: white;
}

.topbar-logo-link .icon-12-rocket {
	font-size: 24px;
}

.topbar-logo-text {
	display: none;
	font-size: 14px;
	letter-spacing: 0px;
	margin-left: 20px;
	position: relative;
	top: 1px;
}

.topbar-logo-label {
	background: rgba(white, .3);
	border-radius: $border-radius-small;
	color: rgba(white, .9);
	font-size: 12px;
	margin-left: 17px;
	padding: 11px 9px 10px 10px;
	position: relative;
	top: -1px;
}

.topbar-list {
	-webkit-box-align: center;
	-webkit-align-items: center;
	-ms-flex-align: center;
	align-items: center;
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	float: right;
	font-size: 0;
	list-style: none;
	margin: 24px 0;
	padding: 0;
}

.topbar-item {
	display: inline-block;
	margin: 0 20px;
}

.topbar-item:last-child {
	margin-right: 0;
}

.topbar-link {
	@include anim(color);
	color: rgba($white, .3);
	font-family: $font-family-secondary;
	font-size: 14px;
	font-weight: 700;
	text-decoration: none;
}

.topbar-link:focus {
	color: rgba($white, .3);
}

.topbar-link:hover,
.topbar-link:focus {
	color: rgba($white, .6);
}

.topbar-link-selected,
.topbar-link-selected:hover,
.topbar-link-selected:focus {
	color: $accent;
}

.topbar-avatar {
	margin-left: 19px;
	position: relative;
	top: 3px;
}

.topbar-avatar .avatar-container {
	cursor: pointer;
	display: inline-block;
}

.topbar-avatar .avatar-initials {
	background: $accent;
}

.topbar-caret {
	margin-left: 10px;
	position: relative;
	top: -13px;
}

@media (min-width: $screen-sm-min) {
	.topbar-logo-text {
		display: block;
	}
}

/* Topbar Light
	 ========================================================================== */

.topbar.topbar-light {
	background: white;
}

.topbar-light .topbar-logo-link {
	color: rgba($accent, .8);
}

.topbar-light .topbar-logo-link:hover,
.topbar-light .topbar-logo-link:focus {
	color: $accent;
}

.topbar-light .topbar-logo-label {
	background: rgba($accent, .3);
	color: $accent;
}

.topbar-light .topbar-list {
	margin: 33px 0;
}

.topbar-light .topbar-link {
	color: rgba($accent, .6);
}

.topbar-light .topbar-link:hover,
.topbar-light .topbar-link:focus {
	color: rgba($accent, .8);
}

.topbar-light .topbar-link-selected {
	color: $accent;
}

.topbar-light .topbar-link-selected:hover,
.topbar-light .topbar-link-selected:focus {
	color: $accent;
}


/* Topbar Inverse
	 ========================================================================== */

.topbar.topbar-inverse {
	background: $accent;
}

.topbar-inverse .topbar-logo-label {
	background: rgba($primary, .2);
}

.topbar-inverse .topbar-list {
	margin: 33px 0;
}

.topbar-inverse .topbar-link {
	color: rgba(white, .5);
}

.topbar-inverse .topbar-link:hover,
.topbar-inverse .topbar-link:focus {
	color: rgba(white, .8);
}

.topbar-inverse .topbar-link-selected {
	color: white;
}

.topbar-inverse .topbar-link-selected:hover,
.topbar-inverse .topbar-link-selected:focus {
	color: white;
}

